@@ -4,16 +4,23 @@ import net.minecraft.server.world.ServerWorld;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.ChunkPos;
 import net.minecraft.world.World;
+import net.minecraft.world.Heightmap;
+import net.minecraft.world.gen.chunk.ChunkGenerator;
+import net.minecraft.world.gen.noise.NoiseConfig;
 import net.oxcodsnet.roadarchitect.RoadArchitect;
 import net.oxcodsnet.roadarchitect.storage.PathStorage;
 import net.oxcodsnet.roadarchitect.util.AsyncExecutor;
 import net.oxcodsnet.roadarchitect.util.CacheManager;
 import net.oxcodsnet.roadarchitect.util.PathFinder;
+import net.oxcodsnet.roadarchitect.util.DebugLog;
+import net.oxcodsnet.roadarchitect.util.profiler.PipelineProfiler;
+import net.oxcodsnet.roadarchitect.worldgen.RoadFeature;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.Map.Entry;
+import java.util.OptionalInt;
 
 /**
  * Post-processes raw A* paths into detailed block sequences
@@ -43,7 +50,7 @@ public final class RoadPostProcessor {
     // ====== Регистрация хуков ======
     public static void onStartWorldTick(ServerWorld world) {
         if (world.isClient()) return;
-        if (world.getRegistryKey() != World.OVERWORLD) return;
+        if (!RoadPipelineController.isDimensionEnabled(world.getRegistryKey())) return;
         processPending(world);
     }
 
@@ -62,8 +69,8 @@ public final class RoadPostProcessor {
     private static List<BlockPos> trimByManhattan(List<BlockPos> path) {
         if (path == null || path.size() < 2) return path;
 
-        BlockPos start0 = path.get(0);
-        BlockPos end0 = path.get(path.size() - 1);
+        BlockPos start0 = path.getFirst();
+        BlockPos end0 = path.getLast();
 
         int i = 0;
         while (i < path.size() && manhattanXZ(path.get(i), start0) <= TRIM_RADIUS_L1) i++;
@@ -88,27 +95,75 @@ public final class RoadPostProcessor {
     private static List<BlockPos> refine(ServerWorld world, List<BlockPos> verts) {
         if (verts.isEmpty()) return List.of();
 
+        ChunkGenerator generator = world.getChunkManager().getChunkGenerator();
+        NoiseConfig noiseConfig = world.getChunkManager().getNoiseConfig();
+        Map<Long, Integer> resolvedHeights = new HashMap<>();
         List<BlockPos> out = new ArrayList<>(verts.size() * PathFinder.GRID_STEP);
         for (int i = 0; i < verts.size() - 1; i++) {
             BlockPos a = verts.get(i);
             BlockPos b = verts.get(i + 1);
-            out.add(a.down());
-            interpolate(world, a, b, out);
+            out.add(adjustToGround(world, generator, noiseConfig, resolvedHeights, a));
+            interpolate(world, generator, noiseConfig, a, b, resolvedHeights, out);
         }
-        out.add(verts.get(verts.size() - 1).down());
+        out.add(adjustToGround(world, generator, noiseConfig, resolvedHeights, verts.getLast()));
         return out;
     }
 
-    private static void interpolate(ServerWorld world, BlockPos a, BlockPos b, List<BlockPos> out) {
+    private static void interpolate(ServerWorld world,
+                                    ChunkGenerator generator,
+                                    NoiseConfig noiseConfig,
+                                    BlockPos a,
+                                    BlockPos b,
+                                    Map<Long, Integer> resolvedHeights,
+                                    List<BlockPos> out) {
         int dx = Integer.signum(b.getX() - a.getX());
         int dz = Integer.signum(b.getZ() - a.getZ());
         int steps = Math.max(Math.abs(b.getX() - a.getX()), Math.abs(b.getZ() - a.getZ()));
         for (int i = 1; i < steps; i++) {
             int nx = a.getX() + dx * i;
             int nz = a.getZ() + dz * i;
-            int ny = CacheManager.getHeight(world, nx, nz) - 1;
+            int ny = resolveSurfaceHeight(world, generator, noiseConfig, resolvedHeights, nx, nz) - 1;
             out.add(new BlockPos(nx, ny, nz));
         }
+    }
+
+    private static BlockPos adjustToGround(ServerWorld world,
+                                           ChunkGenerator generator,
+                                           NoiseConfig noiseConfig,
+                                           Map<Long, Integer> resolvedHeights,
+                                           BlockPos pos) {
+        int surface = resolveSurfaceHeight(world, generator, noiseConfig, resolvedHeights, pos.getX(), pos.getZ());
+        return new BlockPos(pos.getX(), surface - 1, pos.getZ());
+    }
+
+    private static int resolveSurfaceHeight(ServerWorld world,
+                                            ChunkGenerator generator,
+                                            NoiseConfig noiseConfig,
+                                            Map<Long, Integer> resolvedHeights,
+                                            int x,
+                                            int z) {
+        long key = CacheManager.hash(x, z);
+        Integer cached = resolvedHeights.get(key);
+        if (cached != null) {
+            return cached;
+        }
+
+        OptionalInt prepared = RoadFeature.lookupPreparedSurface(x, z);
+        int resolved = prepared.isPresent() ? prepared.getAsInt() : CacheManager.getHeight(world, x, z);
+        int bottomGuard = world.getBottomY() + 1;
+        if (resolved < bottomGuard) {
+            resolved = bottomGuard;
+        }
+
+        if (generator != null && noiseConfig != null) {
+            int generated = generator.getHeight(x, z, Heightmap.Type.WORLD_SURFACE_WG, world, noiseConfig);
+            if (generated > resolved) {
+                resolved = generated;
+            }
+        }
+
+        resolvedHeights.put(key, resolved);
+        return resolved;
     }
 
     private static NormalizeResult normalizeHeights(List<BlockPos> refined) {
@@ -151,7 +206,7 @@ public final class RoadPostProcessor {
                     clamps++;
                     if (LOG_GRAD_CLAMP) {
                         BlockPos p = refined.get(i);
-                        LOGGER.debug("[PostProcess] Clamp↑ at {}: {} -> {} (ref={})", p, old, clamped, y[i - 1]);
+                        DebugLog.info(LOGGER, "[PostProcess] Clamp↑ at {}: {} -> {} (ref={})", p, old, clamped, y[i - 1]);
                     }
                     y[i] = clamped;
                 }
@@ -166,7 +221,7 @@ public final class RoadPostProcessor {
                     clamps++;
                     if (LOG_GRAD_CLAMP) {
                         BlockPos p = refined.get(i);
-                        LOGGER.debug("[PostProcess] Clamp↓ at {}: {} -> {} (ref={})", p, old, clamped, y[i + 1]);
+                        DebugLog.info(LOGGER, "[PostProcess] Clamp↓ at {}: {} -> {} (ref={})", p, old, clamped, y[i + 1]);
                     }
                     y[i] = clamped;
                 }
@@ -200,11 +255,16 @@ public final class RoadPostProcessor {
     // ====== Планирование как у тебя: по одному ключу ======
     public static void processPending(ServerWorld world) {
         PathStorage storage = PathStorage.get(world);
+        PipelineProfiler.increment("postprocess.invocations");
+        int examined = 0;
         for (Entry<String, PathStorage.Status> e : storage.allStatuses().entrySet()) {
+            examined++;
             if (e.getValue() != PathStorage.Status.PENDING) continue;
             schedule(world, storage, e.getKey());
+            PipelineProfiler.increment("postprocess.entries_scheduled");
             break;
         }
+        PipelineProfiler.recordValue("postprocess.entries_examined", examined);
     }
 
     private static void processChunk(ServerWorld world, ChunkPos chunk) {
@@ -223,9 +283,12 @@ public final class RoadPostProcessor {
      */
     private static void schedule(ServerWorld world, PathStorage storage, String baseKey) {
         if (!storage.tryMarkProcessing(baseKey)) return; // уже не PENDING
+        PipelineProfiler.increment("postprocess.jobs_scheduled");
         final List<BlockPos> baseRawInitial = storage.getPath(baseKey);
 
         AsyncExecutor.execute(() -> {
+            PipelineProfiler.increment("postprocess.jobs_started");
+            try (PipelineProfiler.Section section = PipelineProfiler.openSection("postprocess.job")) {
             String activeKey = baseKey;
             List<BlockPos> activeRaw = new ArrayList<>(baseRawInitial);
             // Применяем обрезку по Манхэттену к активному пути до любой обработки
@@ -279,10 +342,10 @@ public final class RoadPostProcessor {
                         toBuild.put(leg.getKey(), nr.path());
 
                         if (!nr.path().isEmpty()) {
-                            List<BlockPos> nrPath = nr.path();
-                            BlockPos s = nrPath.get(0);
-                            BlockPos t = nrPath.get(nrPath.size() - 1);
-                            LOGGER.debug(
+                            BlockPos s = nr.path().getFirst();
+                            BlockPos t = nr.path().getLast();
+                            DebugLog.info(
+                                    LOGGER,
                                     "[PostProcess] READY (leg) key={} points={}, spikesCut={}, gradClamped={}, start={}, end={}",
                                     leg.getKey(), nr.path().size(), nr.spikesCut(), nr.gradClamped(), s, t
                             );
@@ -298,10 +361,10 @@ public final class RoadPostProcessor {
                     toBuild.put(br.trunkRaw.key, trunkNR.path());
 
                     if (!trunkNR.path().isEmpty()) {
-                        List<BlockPos> trunkPath = trunkNR.path();
-                        BlockPos s = trunkPath.get(0);
-                        BlockPos t = trunkPath.get(trunkPath.size() - 1);
-                        LOGGER.debug(
+                        BlockPos s = trunkNR.path().getFirst();
+                        BlockPos t = trunkNR.path().getLast();
+                        DebugLog.info(
+                                LOGGER,
                                 "[PostProcess] READY (trunk) key={} points={}, spikesCut={}, gradClamped={}, start={}, end={}",
                                 br.trunkRaw.key, trunkNR.path().size(), trunkNR.spikesCut(), trunkNR.gradClamped(), s, t
                         );
@@ -324,10 +387,10 @@ public final class RoadPostProcessor {
                     toBuild.put(activeKey, nr.path());
 
                     if (!nr.path().isEmpty()) {
-                        List<BlockPos> nrPath = nr.path();
-                        BlockPos s = nrPath.get(0);
-                        BlockPos t = nrPath.get(nrPath.size() - 1);
-                        LOGGER.debug(
+                        BlockPos s = nr.path().getFirst();
+                        BlockPos t = nr.path().getLast();
+                        DebugLog.info(
+                                LOGGER,
                                 "[PostProcess] READY (single) key={} points={}, spikesCut={}, gradClamped={}, start={}, end={}",
                                 activeKey, nr.path().size(), nr.spikesCut(), nr.gradClamped(), s, t
                         );
@@ -337,6 +400,7 @@ public final class RoadPostProcessor {
 
                 // Разом ставим задачи строителю
                 RoadBuilderManager.queueSegments(world, toBuild);
+                PipelineProfiler.recordValue("postprocess.paths_completed", becameReady.size());
 
             } catch (Exception ex) {
                 LOGGER.error("Post-processing failed for {}", baseKey, ex);
@@ -346,6 +410,7 @@ public final class RoadPostProcessor {
                         storage.setStatus(p, PathStorage.Status.PENDING);
                     }
                 }
+                PipelineProfiler.increment("postprocess.jobs_failed");
                 return;
             }
 
@@ -354,6 +419,7 @@ public final class RoadPostProcessor {
                 if (!becameReady.contains(p) && storage.getStatus(p) == PathStorage.Status.PROCESSING) {
                     storage.setStatus(p, PathStorage.Status.PENDING);
                 }
+            }
             }
         });
     }
@@ -445,8 +511,10 @@ public final class RoadPostProcessor {
 
         int jx = (int) Math.round((pa.getX() + pb.getX()) / 2.0);
         int jz = (int) Math.round((pa.getZ() + pb.getZ()) / 2.0);
-        int jy = CacheManager.getHeight(world, jx, jz); // refine потом даст .down()
-        BlockPos J = new BlockPos(jx, jy, jz);
+        ChunkGenerator generator = world.getChunkManager().getChunkGenerator();
+        NoiseConfig noiseConfig = world.getChunkManager().getNoiseConfig();
+        Map<Long, Integer> resolvedHeights = new HashMap<>();
+        BlockPos J = adjustToGround(world, generator, noiseConfig, resolvedHeights, new BlockPos(jx, pa.getY(), jz));
 
         List<BlockPos> legA = new ArrayList<>(a.subList(0, conv.i + 1));
         legA.set(legA.size() - 1, J);
@@ -490,7 +558,7 @@ public final class RoadPostProcessor {
     }
 
     private static int[] dir(List<BlockPos> pts) {
-        BlockPos s = pts.get(0), e = pts.get(pts.size() - 1);
+        BlockPos s = pts.getFirst(), e = pts.getLast();
         return new int[]{e.getX() - s.getX(), e.getZ() - s.getZ()};
     }
 
