@@ -30,10 +30,7 @@ public final class BlockPalette {
             }
             r -= e.weight;
         }
-        if (this.entries.isEmpty()) {
-            throw new IllegalStateException("Block palette is empty");
-        }
-        return this.entries.get(0).state;
+        return this.entries.getFirst().state;
     }
 
     public static final class Builder {
@@ -54,3 +51,4 @@ public final class BlockPalette {
     private record Entry(BlockState state, int weight) {
     }
 }
+
